[project]
name = "crowdsec-Asus-Bouncer"
version = "0.0.1"
description = "Crowdsec-Asus bouncer"
authors = [{name = "usma0118"}]
readme = "README.md"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "coloredlogs (>=15.0.1,<16.0.0)"
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
package-mode = false
[tool.setuptools.packages.find]
exclude = ["tests*"]
